--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             console.log(sw);
         })
 
-        function subscribe() {
+        async function subscribe() {
             let sw = await navigator.serviceWorker.ready;
             let push = await sw.pushManager.subscribe({
                 userVisibleOnly: true,
