--- a/register.html
+++ b/register.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <button onclick="register()">register</button>
 
     <script>
-        function register() {
-            Notification.requestPermission((status) => {
-                console.log(status)
-            })
-        }
+      function register() {
+        Notification.requestPermission((status) => {
+          console.log(status);
+          navigator.serviceWorker.getRegistration().then(function (reg) {
+            reg.showNotification("Hello world!");
+          });
+        });
+      }
     </script>
-</body>
+  </body>
 </html>
