--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
         const reg = await navigator.serviceWorker.getRegistration();
         var options = {
           body: "Here is a notification body!",
-          icon: "/logo-120.png",
+          icon: "/pw/logo-120.png",
           vibrate: [100, 50, 100],
           data: {
             dateOfArrival: Date.now(),
